# WaryEngine

./: .gitignore  CMakeLists.txt  README.md  Technical_Documentation.md  imgui.ini  run_game.bat
glad/include/KHR/: khrplatform.h
glad/include/glad/: glad.h
glad/src/: glad.c
include/: Engine.h  Entity.h  Input.h  Renderer.h
src/: Engine.cpp  Input.cpp  Renderer.cpp  main.cpp
